k8s/fibbage-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fibbage-backend
spec:
  selector:
    matchLabels:
      app: fibbage-game
  replicas: 1
  template:
    metadata:
      labels:
        app: fibbage-game
    spec:
      containers:
        - name: fibbage-game-server
          image: gcr.io/river-interface-280208/fibbage-game-server
          ports:
            - containerPort: 3250
          livenessProbe:
            httpGet:
              path: /ping
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
