k8s/fibbage-nats.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats
spec:
  selector:
    matchLabels:
      app: fibbage-game
  replicas: 1
  template:
    metadata:
      labels:
        app: fibbage-game
    spec:
      containers:
        - name: nats
          image: nats
          ports:
            - containerPort: 4222
