k8s/fibbage-etcd.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etcd
spec:
  selector:
    matchLabels:
      app: fibbage-game
  replicas: 1
  template:
    metadata:
      labels:
        app: fibbage-game
    spec:
      containers:
        - name: etcd
          image: appcelerator/etcd
          ports:
            - containerPort: 2379
---
apiVersion: v1
kind: Service
metadata:
  name: etcd
spec:
  selector:
    app: fibbage-game
  ports:
    - port: 2379
  clusterIP: None
---
