k8s/fibbage-frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fibbage-game
  name: fibbage-frontend-service

spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: fibbage-game
