k8s/fibbage-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fibbage-game
  name: websocket-game-service

spec:
  externalTrafficPolicy: Cluster
  ports:
    - nodePort: 30007
      port: 3250
      protocol: TCP
      targetPort: 3250
  selector:
    app: fibbage-game
  sessionAffinity: None
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fibbage-game
  name: fibbage-frontend-service

spec:
  externalTrafficPolicy: Cluster
  ports:
    - nodePort: 30008
      port: 8080
      protocol: TCP
      targetPort: 80
  selector:
    app: fibbage-game
  sessionAffinity: None
  type: NodePort
