k8s/fibbage-websocket-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fibbage-game
  name: websocket-game-service
spec:
  type: NodePort
  ports:
    - port: 3250
      protocol: TCP
      targetPort: 3250
  selector:
    app: fibbage-game
