k8s/fibbage-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: fibbage-ingress
  annotations:
    nginx.org/websocket-services: "websocket-game-service"
spec:
  rules:
     - http:
        paths:
          - path: /ws
            backend:
              serviceName: websocket-game-service
              servicePort: 3250
          - path: /*
            backend:
              serviceName: fibbage-frontend-service
              servicePort: 80
